force-app/main/default/objects/Status_OS__c/Status_OS__c.object-meta.xml
<CustomObject>
    <description>Status das ordens de serviço</description>
    <label>Status da OS</label>
    <nameField>
        <label>Nome do Status da OS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status da OS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>