force-app/main/default/objects/Status_OS__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define se um registro está ativo ou não</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>