force-app/main/default/objects/Status_OS__c/fields/Pais_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Pais_Referencia__c</fullName>
    <description>Iso no padrão Alpha-3 do país</description>
    <inlineHelpText>Insira a sigla com 3 letras no padrão ISO do país que relativo a este registro</inlineHelpText>
    <label>País de Referência</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>