force-app/main/default/objects/Status_OS__c/validationRules/Status_OS_alteracao.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_OS_alteracao</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR(
ISCHANGED( Ativo__c) ,
ISCHANGED( Codigo_Externo__c) ,
ISCHANGED( Name) ,
ISCHANGED( Pais_Referencia__c) ,
ISCHANGED( OwnerId)
),
NOT(CONTAINS($Profile.Name, &#39;Administrador do sistema&#39;))

)</errorConditionFormula>
    <errorMessage>Você não possui permissão para alterar essas informações</errorMessage>
</ValidationRule>