force-app/main/default/objects/Status_OS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>