force-app/main/default/objects/Status_OS__c/listViews/Inativos.listView-meta.xml
<ListView>
    <fullName>Inativos</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ativo__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inativos</label>
</ListView>